<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".LoginActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/login_appLogo"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:src="@drawable/logo1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        />

    <TextView
        android:id="@+id/app_login_text"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="62dp"
        android:layout_marginTop="30dp"
        android:text="Tired of typing?  Use remember me!"
        android:textAlignment="center"
        android:textColor="#E77111"
        android:textSize="18dp"
        android:layout_below="@+id/login_appLogo"
        />

    <EditText
        android:id="@+id/login_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_login_text"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/input_design"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:padding="17dp"
        android:textColor="#EDECF1"
        android:textColorHint="#DDDDDD"
        android:textSize="17sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/login_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_email_input"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/input_design"
        android:hint="Password"
        android:inputType="textPassword"
        android:padding="17dp"
        android:textColor="#F3F3F3"
        android:textColorHint="#E5E3EA"
        android:textSize="17sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linear_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/login_password_input"
        android:layout_marginTop="5dp"
        >

        <com.rey.material.widget.CheckBox
            android:id="@+id/rememberMe_checkBox"
            style="@style/Material.Drawable.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_password_input"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:text="Remember me"
            android:textAllCaps="false"
            android:textColor="#F3F3F3"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rememberMe_checkBox"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="20dp"
            android:text="Forgot password?"
            android:textColor="#F3F3F3"
            android:textSize="17sp"
            android:textStyle="bold"

            />

    </LinearLayout>
    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_1"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/buttons"
        android:padding="12dp"
        android:textAllCaps="false"
        android:textSize="23sp"
        android:text="Login"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/admin_panel_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_btn"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="23dp"
        android:text="I am an admin"
        android:textColor="#F4F1EF"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/not_admin_panel_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_btn"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="15dp"
        android:text="I am a customer"
        android:textColor="#F3F2F1"
        android:textSize="17sp"
        android:textStyle="bold"
        android:visibility="invisible" />

</RelativeLayout>