<resources>
    <string name="app_name">GiftMe</string>
    <string name="cake_name">Coffee cake</string>
    <string name="cake_description">Same design as shown in the image. Weight is 1 Kg.</string>
    <string name="cake_price">LKR 1800.00</string>
    <string name="view_home">Home</string>
    <string name="view_occasions">Occasions</string>
    <string name="view_account">Account</string>
    <string name="view_cart">Cart</string>
    <string name="display_checkout">Buy now</string>
    <string name="display_discountMessage">Buy more than 1 item and get a 5% discount!</string>
    <string name="text_Quantity">Quantity</string>
    <string name="increase_noOfItems">+</string>
    <string name="decrease_noOfItems">-</string>
    <string name="noOfItems">1</string>
    <string name="text_noOfItems">(5 items are available)</string>
    <string name="text_checkout">Checkout</string>
    <string name="text_billAndDeliverTo">Bill and deliver to :</string>
    <string name="text_AddressOfKasun">589, Kandy, Central</string>
    <string name="text_phoneOfKasun">0771234567</string>
    <string name="text_emailOfKasun">kasun.p@gmail.com</string>
    <string name="btn_EditDetails">Edit details</string>
    <string name="btn_ProceedToPay">Proceed to pay</string>
    <string name="txt_CalculateTotal">LKR 2000.00</string>
    <string name="text_Total">Total :</string>
    <string name="text_SubTotal">Subtotal</string>
    <string name="text_discount">Discount :</string>
    <string name="text_shippingFee">Shipping fee :</string>
    <string name="text_items">item(s) :</string>
    <string name="display_discount">LKR 0.00</string>
    <string name="display_ShippingFee">LKR 200.00</string>
    <string name="text_myCart">My cart</string>
    <string name="text_defaultNoOfItems">1</string>
    <string name="text_delete">Delete</string>
    <string name="text_update">Update</string>
    <string name="toblerone_name">Toblerone chocolate</string>
    <string name="toblerone_price">LKR 1250.00</string>
    <string name="text_deleteFromCart">Delete from cart</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_message1">Are you sure you want to</string>
    <string name="text_message2">delete this item?</string>
    <string name="text_AllOrders">All orders</string>
    <string name="text_OrdersToPay">Orders to pay</string>
    <string name="text_myOrderNumber1">Order 202007291612</string>
    <string name="text_paid">Paid</string>
    <string name="text_orderStatus1">Pending</string>
    <string name="text_orderStatus2">Delivered</string>
    <string name="text_placedOn1">Placed on 29 July 2020 20 : 16 : 12</string>
    <string name="text_paidOn1">Paid on 29 July 2020 20 : 16 : 20</string>
    <string name="text_viewOrder">View order</string>
    <string name="text_shopMore">Shop more</string>
    <string name="text_noOrdersToPay">There are no orders to pay!</string>
    <string name="text_cancelOrder">Cancel order</string>
    <string name="text_viewProduct">View product</string>
    <string name="text_cancelOrderMessage2">cancel this order?</string>
    <string name="text_exit">Exit</string>
    <string name="title_activity_my_account">MyAccount</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="text_products">Products</string>
    <string name="text_orders">Orders</string>
    <string name="text_view">View</string>
    <string name="text_viewMore">View more</string>
    <string name="text_orderedBy">Ordered by :</string>
    <string name="text_shipped">Shipped</string>
    <string name="text_myAccount">My account</string>
    <string name="text_accountDetails">Account details</string>
    <string name="text_paymentDetails">Payment details</string>
    <string name="text_deliveryDetails">Delivery details</string>
    <string name="text_myOrders">My orders</string>
    <string name="text_logout">Logout</string>
    <string name="display_product">Product</string>
    <string name="loginName">GiftME</string>
    <string name="todo">TODO</string>
    <string name="btnLogin">Login</string>
    <string name="btnSignup">Create Account</string>
    <string name="loginLabel1">Email</string>
    <string name="loginLabel2">Password</string>
    <string name="loginSubmit">Enter</string>
    <string name="View_orders">Orders</string>
    <string name="view_products">Products</string>
    <string name="prod_interface">Products</string>
    <string name="itemNameView">Item Name</string>
    <string name="ItemPriceView">Item Price</string>
    <string name="selectOcassion">Select Occasion</string>
    <string name="prodConfirm">Save</string>
    <string name="occassion1">Valentine\'s Day</string>
    <string name="Occassion2">Birthdays</string>
    <string name="Occassion3">Weddings</string>
    <string name="Occassion4">Promotions</string>
    <string name="Occasion5">Casual Party</string>
    <string name="Occassion6">Bridal Shower</string>
    <string name="AddProductSave">Save</string>
    <string name="AddProductInterface">Add Products</string>
    <string name="CreateAccountInstructions">Enter Details To Create an Account</string>
    <string name="formName">Name</string>
    <string name="pswdRepeat">Re-Enter </string>
    <string name="formPhone">Phone Number</string>
    <string name="Available">Available</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="EditProducts">Edit Products</string>
    <string name="toblerone">Toblerone Chocolate</string>
    <string name="price">LKR 1250.00</string>
    <string name="removeProd">Remove</string>
    <string name="editProd">Edit</string>
    <string name="AddNew">Add New</string>
    <string name="tvCart">Cart</string>
    <string name="tvOccasion">Occasions</string>
    <string name="Other">Other</string>
    <string name="prodDescription">10 Pcs Pack</string>
    <string name="BuyNow">Buy Now</string>
    <string name="ViewProd">View</string>
    <string name="AddCart">Add to Cart</string>
    <string name="phone">phone</string>
    <string name="paswdrst">Reset Password</string>
    <string name="editAccount">Edit Account</string>
    <string name="Dummy">Dmmy Data</string>
    <string name="Accountdets">Account Details</string>
    <string name="resetPassword">\t\t\tReset Account Password</string>
    <string name="valentineChoco">Valentine\'s Day Rose</string>
    <string name="price2">LKR 2500.00</string>


    <string name="text_price">Total price : LKR 2500.00</string>
    <string name="text_payment">Payment details</string>
    <string name="text_method">Payment method</string>
    <string name="but_credit">Credit card</string>
    <string name="but_cash">Cash on delivery</string>
    <string name="text_name">Customer name</string>
    <string name="tex_address">Address</string>
    <string name="butn_cancel">Cancel</string>
    <string name="butn_update">Update</string>
    <string name="butn_confirm">Confirm</string>
    <string name="text_confirmpayment">Confirm payment</string>
    <string name="butn_view">View order</string>
    <string name="text_success">Successfully paid....</string>
    <string name="text_terms">Accept terms and condtions</string>
    <string name="text_pmethod">Payment method</string>
    <string name="text_cardnum">Card number</string>
    <string name="text_exdate">Expiration date</string>
    <string name="text_cvv">cvv</string>
    <string name="butn_pay">Pay</string>
    <string name="text_order">Order id :</string>
    <string name="text_product">Product :</string>
    <string name="text_quantity">Quantity :</string>
    <string name="text_aprice">Price :</string>
    <string name="text_order1">1235</string>
    <string name="text_product1">Coffee cake</string>
    <string name="text_quantity1">1</string>
    <string name="text_price1">LKR1800.00</string>
    <string name="text_order2">1236</string>
    <string name="text_product2">Toblerone</string>
    <string name="text_quantity2">4</string>
    <string name="text_price2">LKR 1000.00</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_save">save</string>


    <string name="displays_product">Pack to Deliver-Dashboard</string>
    <string name="code">Item Name</string>
    <string name="name">Quantity</string>
    <string name="vw">View</string>
    <string name="dlt">Delete</string>
    <string name="sts">Price</string>

    <string name="dcode">Code</string>
    <string name="Vew">View</string>
    <string name="displays_checkout">Delivery History</string>
    <string name="title_activity_main2">MainActivity2</string>


    <string name="head2">Delivery Information</string>
    <string name="add">Address</string>
    <string name="phn">Phone</string>
    <string name="od">Ordered Date</string>

    <string name="back">Back</string>
    <string name="title_activity_deliver_to">DeliverTo</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_main3">MainActivity3</string>
    <string name="title_activity_main4">MainActivity4</string>
    <string name="text_userGuide">User guide</string>
    <string name="text_admin">Administrator</string>
    <string name="text_customer">Customer</string>
    <string name="text_tempMesage">(This interface is a temporary interface which is used to check the navigation.)</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_gift_m_e_home">GiftME_home</string>
    <string name="Select">Choose An Occasion</string>
    <string name="productDets">Product Details</string>
    <string name="click">Click Below To Add An Image</string>
    <string name="entername">Enter Item Name</string>
    <string name="enterprice">Enter Item Price</string>
    <string name="occasion">Occasion</string>
    <string name="availabale">Availaility</string>
    <string name="neworder">New Orders</string>
    <string name="Accepted">Accepted Orders</string>
    <string name="Delveries">Deliveries</string>
    <string name="deli">Deliveries</string>
    <string name="orderid">"Order ID "</string>
    <string name="detailsss">Order Details</string>
    <string name="itemsss">Items</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="acceptedorder">Accepted Orders</string>
    <string name="payments">Payments</string>
    <string name="viewrder">View Order</string>
    <string name="refunds">Refund Requests</string>
    <string name="Account">Account</string>
    <string name="Acount">Acount Details</string>
    <string name="pwd">Enter Current Password</string>
    <string name="pas">Current Passwod</string>
    <string name="newpwd">Enter New Password</string>
    <string name="repeatpwd">Re-Enter Password</string>
    <string name="amil">Email</string>
    <string name="hkjdaf">Enter Rider Name</string>
    <string name="riderControl">Rider Control</string>
    <string name="addrider">Add Rider</string>
    <string name="vehive">Vehicle Plate Number</string>
    <string name="licence">License</string>
    <string name="vehicle">Vehicle Type</string>
    <string name="ongoing">Ongoing Deliveries</string>
    <string name="search">Search</string>
    <string name="searchHint">Search here</string>


    <string-array name="events">
        <item>Valentines Day</item>
        <item>Birthdays</item>
        <item>Promotions</item>
        <item>Parties</item>
        <item>Bridal Shower</item>
        <item>Weddings</item>
        <item>Other</item>
    </string-array>

    <string-array name="vehicles">
        <item>Car</item>
        <item>Van</item>
        <item>Bike</item>
        <item>Three Wheeler</item>
        <item>Mini van</item>


    </string-array>
    <string-array name="prodStatus">
        <item>Available</item>
        <item>Not Available</item>
    </string-array>


    <string-array name="reasons">
        <item>Change of mind</item>
        <item>Delivery time is too long</item>
        <item>Change of delivery address</item>
    </string-array>

    <string name="cancel_order_Cancel_order">Cancel order</string>
    <string name="cancel_order_message">Please select your reason</string>
    <string name="cancel_order_other_reasons">Other reasons</string>
    <string name="cancel_order_go_to_home">Go to home</string>
    <string name="login_text">Tired of typing? Use remember me.</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_remember_me">Remember me</string>
    <string name="login_forgot_password">Forgot password</string>
    <string name="login_login">Login</string>
    <string name="login_user_type">I am an admin</string>
    <string name="cart_items_layout_product_name">Product name</string>
    <string name="cart_items_layout_product_quantity">Product quantity</string>
    <string name="cart_items_layout_product_price">Product price</string>
    <string name="cart_total_price">Total price</string>
    <string name="cart_checkout">Checkout</string>
    <string name="checkout_heading">Confirm your shipping details</string>
    <string name="checkout_name">Name</string>
    <string name="checkout_phone_number">Phone number</string>
    <string name="checkout_address">Address</string>
    <string name="checkout_city">City</string>
    <string name="checkout_postal_code">Postal code</string>
    <string name="checkout_confirm">Confirm</string>
    <string name="settings_close">Close</string>
    <string name="settings_update">Update</string>
    <string name="settings_change_profile">Change profile</string>
    <string name="settings_user_name">User name</string>
    <string name="settings_user_email">User email</string>
    <string name="settings_user_phone">User phone</string>
    <string name="settings_user_address">User address</string>
    <string name="status_pending">Pending</string>
    <string name="order_items_layout_quantity">Quantity</string>
    <string name="orders_layout_address_city">Address, City</string>
    <string name="orders_layout_date_time">Date, time</string>
    <string name="product_items_layout">Product description</string>
    <string name="user_settings_change_password">Want to change the password?</string>
    <string name="checkout_total_amount">"Total amount : "</string>
</resources>